fix: Build Spoon signatures from javassist signatures; then just resolve