@@ -1,6 +1,7 @@
 package com.github.maracas.util;
 
-import javassist.CtBehavior;
+import japicmp.model.JApiConstructor;
+import japicmp.model.JApiMethod;
 import spoon.Launcher;
 import spoon.reflect.CtModel;
 import spoon.reflect.code.CtIf;
@@ -19,6 +20,7 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Path;
+import java.util.stream.Collectors;
 
 public class SpoonHelpers {
 
@@ -59,28 +61,20 @@ public class SpoonHelpers {
 		return parent;
 	}
 
-	/**
-	 * Verifies if the signature of a Spoon method (CtExecutableReference)
-	 * is equivalent to the one of the JApiCmp method (CtBehavior).
-	 * @param spoonMethod the Spoon method
-	 * @param japiMethod  The JapiCmp method
-	 * @return            <code>true</code> if the methods have the same
-	 *                    signature; <code>false</code> otherwise.
-	 */
-	public static boolean matchingSignatures(CtExecutableReference<?> spoonMethod, CtBehavior japiMethod) {
-		String japiMethName = "";
+	public static String buildSpoonSignature(JApiMethod m) {
+		String returnType = m.getReturnType().getOldReturnType();
+		if (returnType.equals("n.a."))
+			returnType = "void";
+		String type = m.getjApiClass().getFullyQualifiedName();
+		String name = m.getName();
+		String params = m.getParameters().stream().map(p -> p.getType()).collect(Collectors.joining(","));
+		return "%s %s#%s(%s)".formatted(returnType, type, name, params);
+	}
 
-		if (spoonMethod.isConstructor() && japiMethod.getLongName().contains("$")) {  // Inner class constructor
-			String ln = japiMethod.getLongName();
-			String outerCN = ln.substring(0, ln.indexOf("$"));
-			japiMethName = ln.replaceAll(String.format("\\(%s,?", outerCN), "(");
-		} else if (spoonMethod.isConstructor()) {                                     // Regular constructor
-			japiMethName = japiMethod.getLongName();
-		} else {                                                                      // Regular method
-			japiMethName = japiMethod.getName().concat(japiMethod.getSignature());
-		}
-
-		return japiMethName.startsWith(spoonMethod.getSignature());
+	public static String buildSpoonSignature(JApiConstructor cons) {
+		String type = cons.getjApiClass().getFullyQualifiedName();
+		String params = cons.getParameters().stream().map(p -> p.getType()).collect(Collectors.joining(","));
+		return " %s#<init>(%s)".formatted(type, params);
 	}
 
 	public static String fullyQualifiedName(CtReference ref) {
